<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment"
    android:id="@+id/fragment_settings_LL">

    <TextView
        android:id="@+id/settingsDescriptionTV"
        style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settingsDescription_text"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/playersCountSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:text="@string/settingsPlayerCount_text"
        android:textOff="x2"
        android:textOn="x4"
        android:textSize="25sp"
        app:showText="true" />

    <TextView
        android:id="@+id/fieldSizeTV"
        style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fieldSize_text"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldWidthTIL"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fieldWidthTIET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/fieldWidth_text"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldHeightTIL"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fieldHeightTIET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/fieldHeight_text"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>